--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li><a href="./recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna Recipe</a></li>
         <li><a href="./recipes/english-muffin.html">English Muffin Recipe</a></li>
 
     </ul>
