Add target and rel attributes to eng-muff recipe
Safely open recipe in a new tab

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna Recipe</a></li>
-        <li><a href="./recipes/english-muffin.html">English Muffin Recipe</a></li>
+        <li><a href="./recipes/english-muffin.html" target="_blank" rel="noopener noreferrer">English Muffin Recipe</a>
+        </li>
 
     </ul>
 </body>
